2013-01-28 15:21  li2012.zhang@samsung.com

	* Disable AUTO_COMMIT and SELECT_KEYS for ZhuYin-Big

2013-01-25 15:20  li2012.zhang@samsung.com

	* Add always show candidate feature.

2013-01-23 20:00  li2012.zhang@samsung.com

	* Remove duplicated phrases in candidate.

2013-01-18 14:50  li2012.zhang@samsung.com

	* Remove Private Use Zone unicode character(E000-F8FF) from SmartCangJie6 database

2013-01-15 15:00  li2012.zhang@samsung.com

	* Adjust preedit AttributeList to follow the norm of edje_entry require.

2008-12-22 14:59  ryo-dairiki

	* po/ko.po, po/nl.po, tables/zh/Cantonese.txt.in: - Update the
	  order of characters in zh/Cantonese.txt.in.

2008-12-20 04:19  ryo-dairiki

	* ChangeLog, configure.ac, skim/configure.in.in: - Update
	  ChangeLog.

2008-12-20 04:13  ryo-dairiki

	* tables/ml/Malayalam-inscript.txt.in: - Fix "scim-Bugs-2418435",
	  Malayalam inscript layout problem.

2008-09-15 21:44  yurivict

	* ChangeLog, configure.ac, icons/Makefile.am,
	  icons/RussianTraditional.png, scim-tables.spec.in,
	  tables/ru/Makefile.am, tables/ru/RussianTraditional.txt.in: Added
	  Russian Traditional (Typewriter) keyboard layout.

2008-09-15 19:39  yurivict

	* ChangeLog, skim/bootstrap: Replaces old CVS access with new SVN
	  access to akim/admin dirs in bootstrap files.
	  Fixed some minor build issues.

2008-08-27 06:16  juhp

	* src/scim_generic_table.h: fix build with gcc43

2008-08-26 04:09  juhp

	* skim/AUTHORS: add Ronald Stroethoff

2008-08-26 04:02  juhp

	* skim/po/nl.po: add nl translation from Ronald Stroethoff

2008-08-26 03:52  juhp

	* po/nl.po: updated translation from Ronald Stroethoff

2008-08-18 21:24  yurivict

	* ., .cproject, .cvsignore, ABOUT-NLS, AUTHORS, COPYING, ChangeLog,
	  INSTALL, Makefile.am, NEWS, README, THANKS, bootstrap,
	  config.rpath, configure.ac, cvs2cl.pl, developers, docs,
	  docs/.cvsignore, docs/Makefile.am, docs/scim-make-table.1, icons,
	  icons/.cvsignore, icons/Amharic.png, icons/Arabic.png,