@@ -1,3 +1,7 @@
+2013-05-31 20:10  li2012.zhang@samsung.com
+
+	* Hide candidate in NUMBERONLY layout
+
 2013-01-28 15:21  li2012.zhang@samsung.com
 
 	* Disable AUTO_COMMIT and SELECT_KEYS for ZhuYin-Big
